--- a/html css/example/index.html
+++ b/html css/example/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wordpress intensiv</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700,900&display=swap&subset=cyrillic-ext" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
 </head>
     <section class="promo">
