--- a/JS/otusJs/lessons/index.html
+++ b/JS/otusJs/lessons/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello world!</title>
-    <script src="/projects/JS/otusJs/lessons/script.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     
