--- a/Bootstrap/Uber/src/index.html
+++ b/Bootstrap/Uber/src/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
+        <nav>
         <div class="container">
-            <nav>
                 <ul class="menu">
                     <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
                     <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
@@ -22,8 +22,26 @@
                     <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
                 </ul>
-            </nav>
         </div>
+    </nav>
+    <div class="subheader">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 offset-md-1">
+                    <a href="#" class="subheader_logo"><img src="icons/logo.png" alt="logo"></a>
+                    <div class="subheader_official">Оффициальный партнёр Uber в Хобитании</div>
+                </div>
+                <div class="col-md-2 offset-md-2">
+                    <div class="subheader_call">Звоните нам ежедневно</div>
+                    <a href="tel:8111111111" class="subheader_phone">8111 797 09 88</a>
+                </div>
+                <button class="subheader_btn">заказать звонок</button>
+                <div class="col-md-2 offset-md-2">
+                
+                </div>
+            </div>
+        </div>
+    </div>
     </header>
     
 </body>
