--- a/Bootstrap/Uber/src/index.html
+++ b/Bootstrap/Uber/src/index.html
@@ -64,6 +64,25 @@
 
         </div>
     </section>
+
+    <section class="reasons">
+        <div class="container">
+            <div class="label">преимущества</div>
+            <h2 class="title">8 причин начать работать с нами</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/reasons/reason_1.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
+                            <div class="reasons_text">
+                                Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.
+                            </div>
+                        </div>
+                    </div>
+                </div>
     
 </body>
 </html>
