--- a/preprocessor/example1/index.html
+++ b/preprocessor/example1/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Hello World!</h1>
     <h2>Another World!</h2>
+    <div class="block">
+        <div class="block_color">
+            <button>Click me</button>
+        </div>
+        <h3>Hello</h3>
+    </div>
 </body>
 </html>
