--- a/Bootstrap/Uber/src/index.html
+++ b/Bootstrap/Uber/src/index.html
@@ -180,6 +180,53 @@
         </div>
     </section>
 
+    <section class="mobile">
+        <div class="container">
+            <div class="label">возможности</div>
+            <div class="title">мобильное приложение убер</div>
+            <div class="subtitle">Сделайте заказ, совершите поездку и оплатите её стоимость, используя свой мобильный телефон</div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mobile_item">
+                        <div class="mobile_item_subtitle"></div>
+                        <div class="mobile_item_plus"><img src="" alt=""></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item">
+                        <div class="mobile_item_subtitle"></div>
+                        <div class="mobile_item_plus"><img src="" alt=""></div></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item">
+                        <div class="mobile_item_subtitle"></div>
+                        <div class="mobile_item_plus"><img src="" alt=""></div></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item">
+                        <div class="mobile_item_subtitle"></div>
+                        <div class="mobile_item_plus"><img src="" alt=""></div></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item">
+                        <div class="mobile_item_subtitle"></div>
+                        <div class="mobile_item_plus"><img src="" alt=""></div></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item">
+                        <div class="mobile_item_subtitle"></div>
+                        <div class="mobile_item_plus"><img src="" alt=""></div></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
     
