Otuz. Дошел до 4. Встроенные инструменты

--- a/JS/otusJs/lessons/index.html
+++ b/JS/otusJs/lessons/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello world!</title>
-    <script src="script.js"></script>
 </head>
 <body>
-    
+    <h1 class="title">Hello JavaScript</h1>
+    <p>I am website about JavaScript</p>
+    <button>Click me!</button>
+    <ul>
+        <li>First</li>
+        <li>Second</li>
+        <li class="last">Third</li>
+    </ul>
+    <div class="messages">
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus sequi modi molestiae in ab culpa cupiditate debitis, expedita deleniti? Cumque non, debitis itaque totam vel soluta cupiditate earum aliquam labore?</p>
+    <button class="button">Click</button>
+
+    <script src="script.js"></script>
 </body>
 </html>
