37 Несколько селекторов слитно

--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -18,169 +18,124 @@
     </ul>
     <h3>Заголовок 2</h3>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, consectetur. Cumque reiciendis amet, ex laborum
+    <p class="success large">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, consectetur. Cumque
+        reiciendis amet, ex laborum
         animi similique molestias aut in optio, nemo exercitationem voluptatibus dicta consequatur eos quae voluptates
         laudantium.</p>
+    <p class="error small">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et numquam odit omnis labore,
+        possimus illo dolor
+        voluptas quasi est quidem magnam cum voluptatibus itaque quam placeat neque, atque, voluptatem dolorem.</p>
 
-    <ul>
-        <li class="odd">пункт</li>
-        <li class="eve">пункт</li>
-        <li class="odd">пункт</li>
-        <li class="eve">пункт</li>
-        <li class="odd">пункт</li>
-        <li class="eve">пункт</li>
-    </ul>
+    <p class="error large">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, consectetur. Cumque reiciendis
+        amet, ex laborum
+        animi similique molestias aut in optio, nemo exercitationem voluptatibus dicta consequatur eos quae voluptates
+        laudantium.</p>
+    <p class="success small">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et numquam odit omnis labore,
+        possimus illo dolor
+        voluptas quasi est quidem magnam cum voluptatibus itaque quam placeat neque, atque, voluptatem dolorem.</p>
 
-    <h2 class="eee">заголовок</h2>
+    <p class="i j s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolor quam accusantium maiores
+        dolorem eius aliquam totam. Saepe ratione laudantium tempore culpa minus! Voluptatem, nam unde perferendis autem
+        voluptate neque!</p>
+
+
+    <div id="elem1">
+        <h2>заголовок</h2>
+        <p>
+            текст
+        </p>
+        <p>
+            текст
+        </p>
+    </div>
+    <div id="elem2">
+        <h2>заголовок</h2>
+        <p>
+            текст
+        </p>
+        <p>
+            текст
+        </p>
+    </div>
+    <div id="elem3">
+        <h2>заголовок</h2>
+        <p>
+            текст
+        </p>
+        <p>
+            текст
+        </p>
+    </div>
+
+    <div id="elem">
+        <h2>выбрать</h2>
+        <p>не выбирать</p>
+
+        <h2>выбрать</h2>
+        <p>не выбирать</p>
+    </div>
+
+    <h2>не выбирать</h2>
+    <p>не выбирать</p>
+
+    <div id="elemq">
+        <p class="text">выбрать</p>
+        <p class="text">выбрать</p>
+
+        <ul>
+            <li class="text">выбрать</li>
+            <li class="text">выбрать</li>
+            <li class="text">выбрать</li>
+            <li>не выбирать</li>
+            <li>не выбирать</li>
+        </ul>
+    </div>
+
+    <p class="text">не выбирать</p>
+
+
+    <div id="elemw">
+        <p class="text">выбрать</p>
+        <p class="text">выбрать</p>
+
+        <ul>
+            <li class="text">не выбирать</li>
+            <li class="text">не выбирать</li>
+            <li class="text">не выбирать</li>
+            <li>не выбирать</li>
+            <li>не выбирать</li>
+        </ul>
+    </div>
+
+    <p class="text">не выбирать</p>
+
+    <div id="elemy">
+        <p class="text">не выбирать</p>
+        <p class="text">не выбирать</p>
+
+        <ul>
+            <li class="text">выбрать</li>
+            <li class="text">выбрать</li>
+            <li class="text">выбрать</li>
+            <li>не выбирать</li>
+            <li>не выбирать</li>
+        </ul>
+    </div>
+
+    <p class="text2">не выбирать</p>
+
     <p class="eee">
         абзац
     </p>
-    <p class="eee">
+    <p class="zzz">
         абзац
     </p>
-    <p>
-        абзац без класса
+    <p class="ccc">
+        абзац
     </p>
-
-    <ul class="eee">
-        <li>пункт</li>
-        <li>пункт</li>
-        <li>пункт</li>
-        <li>пункт</li>
-        <li>пункт</li>
-    </ul>
-
-    <p>
-        Lorem ipsum <span class="xxx">dolor sit</span> amet.
+    <p class="eee zzz ccc">
+        абзац
     </p>
-    <p>
-        <span class="xxx">Lorem ipsum</span> dolor sit amet.
-    </p>
-
-    <div class="red">
-        <h2>заголовок</h2>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-    </div>
-    <div class="green">
-        <h2>заголовок</h2>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-    </div>
-    <div class="blue">
-        <h2>заголовок</h2>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-    </div>
-
-
-
-    <div class="red">
-        <h2>заголовок</h2>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-    </div>
-    <div class="red">
-        <h2>заголовок</h2>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-    </div>
-    <div class="green">
-        <h2>заголовок</h2>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-    </div>
-    <div class="green">
-        <h2>заголовок</h2>
-        <p>
-            текст
-        </p>
-        <p>
-            текст
-        </p>
-
-    </div>
-    <h2 class="header">заголовок</h2>
-    <h2 class="header">заголовок</h2>
-    <h3 class="header">заголовок</h3>
-    <h3 class="header">заголовок</h3>
-
-    <p class="eee">
-        текст <i>курсив</i>
-    </p>
-    <p class="eee">
-        текст <i>курсив</i>
-    </p>
-    <div class="eee">
-        текст <i>курсив</i>
-    </div>
-    <div class="eee">
-        текст <i>курсив</i>
-    </div>
-
-    <div class="eee1">
-        <p class="hz">Hello</p>
-        <p class="red1">Привет Мир!</p>
-    </div>
-
-    <div class="q">
-        <h2>GGGGGGGGGGGGG</h2>
-        <h3>FFFFFFFFFFFFF</h3>
-    </div>
-
-    <div class="qq">
-        <h2>GGGGGGGGGGGGG</h2>
-        <h3>FFFFFFFFFFFFF</h3>
-        <h3 class="bbb">ddsdsdsdsdsd</h3>
-    </div>
-
-    <div class="yyy">AAAAAAdsddddddddgfgg
-        <p>ddddddddddd</p>
-        <p class="ddd">kkkkkkkkkkkkkk</p>
-    </div>
-
-    <div class="1eee">
-        <p>hue moe</p>
-        <div class="1bbb">
-            hue fdfdfdfdd
-            <div class="kkk">
-                <h2>Kaka</h2>
-            </div>
-        </div>
-    </div>
 
 </body>
 
