43.Оформление.Фоновый цвет

--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -17,7 +17,8 @@
         <li>текст <i>курсив</i> текст</li>
     </ul>
     <h3>Заголовок 2</h3>
-
+    <a href="#">ссыыыыыыыыыыыыыыы</a>
+    <div class="zzz"><a href="#">ссыыыыыыыыыыыыыыы</a></div>
 
 
 
