48.Разные скругления для разных углов CSS

--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -20,6 +20,28 @@
     <a href="#">ссыыыыыыыыыыыыыыы</a>
     <div class="zzz"><a href="#">ссыыыыыыыыыыыыыыы</a></div>
 
+    <div id="elem">
+        <p>Lorem, ipsum dolor sit amet</p>
+    </div>
+
+    <div class="g"></div>
+    <div class="g1"></div>
+    <div class="g2"></div>
+    <div class="g3"></div>
+    <div class="g4"></div>
+    <div id="g5"></div>
+    <div id="g6"></div>
+    <div id="g7"></div>
+    <div class="g8"></div>
+    <div class="g9"></div>
+    <div id="g10"></div>
+    <div id="g11"></div>
+    <div id="g12"></div>
+
+
+
+
+
 
 
 </body>
