--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -37,6 +37,9 @@
     <div id="g10"></div>
     <div id="g11"></div>
     <div id="g12"></div>
+    <div class="g13"></div>
+    <div class="g14"></div>
+
 
 
 
