--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -11,41 +11,16 @@
 <body>
     <h1>Заголовок 1</h1>
     <h2>Заголовок 2</h2>
-    <ul>
-        <li>текст <i>курсив</i> текст</li>
-        <li>текст <i>курсив</i> текст</li>
-        <li>текст <i>курсив</i> текст</li>
-    </ul>
-    <h3>Заголовок 2</h3>
-    <a href="#">ссыыыыыыыыыыыыыыы</a>
-    <div class="zzz"><a href="#">ссыыыыыыыыыыыыыыы</a></div>
-
-    <div id="elem">
-        <p>Lorem, ipsum dolor sit amet</p>
+    <div id="elem1">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nihil earum corrupti aperiam tempora ipsam iste
+        fuga sed iure dolore? Placeat nemo error, molestiae reprehenderit minus minima necessitatibus cum commodi.
     </div>
-
-    <div class="g"></div>
-    <div class="g1"></div>
-    <div class="g2"></div>
-    <div class="g3"></div>
-    <div class="g4"></div>
-    <div id="g5"></div>
-    <div id="g6"></div>
-    <div id="g7"></div>
-    <div class="g8"></div>
-    <div class="g9"></div>
-    <div id="g10"></div>
-    <div id="g11"></div>
-    <div id="g12"></div>
-    <div class="g13"></div>
-    <div class="g14"></div>
-
-
-
-
-
-
-
+    <div id="elem">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, corporis voluptatum accusamus quisquam
+        repudiandae libero. Quisquam dolorum illo reiciendis, possimus beatae placeat fugiat, eum doloremque nulla
+        dolor, ab quis nemo!
+    </div>
+    </div>
 
 </body>
 
