65.Выравнивание блочных элементов на CSS

--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -11,16 +11,35 @@
 <body>
     <h1>Заголовок 1</h1>
     <h2>Заголовок 2</h2>
-    <div id="elem1">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nihil earum corrupti aperiam tempora ipsam iste
-        fuga sed iure dolore? Placeat nemo error, molestiae reprehenderit minus minima necessitatibus cum commodi.
+
+
+    <div id="elem1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
     </div>
-    <div id="elem">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, corporis voluptatum accusamus quisquam
-        repudiandae libero. Quisquam dolorum illo reiciendis, possimus beatae placeat fugiat, eum doloremque nulla
-        dolor, ab quis nemo!
+    <div id="elem2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eos odit,
     </div>
+
+    <span>text</span>
+    <span>text</span>
+    <span>text</span>
+    <div class="str">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident deleniti incidunt blanditiis! Praesentium
+            provident veritatis, ratione facere, voluptatibus deleniti magni, neque necessitatibus voluptates possimus
+            distinctio. Dicta aspernatur hic explicabo nulla!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident deleniti incidunt blanditiis! Praesentium
+            provident veritatis, ratione facere, voluptatibus deleniti magni, neque necessitatibus voluptates possimus
+            distinctio. Dicta aspernatur hic explicabo nulla!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident deleniti incidunt blanditiis! Praesentium
+            provident veritatis, ratione facere, voluptatibus deleniti magni, neque necessitatibus voluptates possimus
+            distinctio. Dicta aspernatur hic explicabo nulla!</p>
+        <a href="#">click</a>
+        <a href="#">click</a>
+        <a href="#">click</a>
+        <a href="#">click</a>
+
     </div>
+    <div class="elem">text</div>
+    <div class="elem">text</div>
+    <div class="elem">text</div>
 
 </body>
 
