70.Абсолютное позиционирование элементов на CSS

--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -1,81 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <h1>Заголовок 1</h1>
-    <h2>Заголовок 2</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-    <div id="elem1">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
-    </div>
-    <div id="elem2">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eos
-      odit,
-    </div>
+<body>
+  <h1>Заголовок 1</h1>
+  <h2>Заголовок 2</h2>
+  <div class="parent">
+    <div class="child">1</div>
+    <div class="child">2</div>
+    <div class="child">3</div>
+    <div class="child">4</div>
+    <div class="child">5</div>
 
-    <span>text</span>
-    <span>text</span>
-    <span>text</span>
-    <div class="str">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-        deleniti incidunt blanditiis! Praesentium provident veritatis, ratione
-        facere, voluptatibus deleniti magni, neque necessitatibus voluptates
-        possimus distinctio. Dicta aspernatur hic explicabo nulla!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-        deleniti incidunt blanditiis! Praesentium provident veritatis, ratione
-        facere, voluptatibus deleniti magni, neque necessitatibus voluptates
-        possimus distinctio. Dicta aspernatur hic explicabo nulla!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-        deleniti incidunt blanditiis! Praesentium provident veritatis, ratione
-        facere, voluptatibus deleniti magni, neque necessitatibus voluptates
-        possimus distinctio. Dicta aspernatur hic explicabo nulla!
-      </p>
-      <a href="#">click</a>
-      <a href="#">click</a>
-      <a href="#">click</a>
-      <a href="#">click</a>
-    </div>
-    <div class="elem">text</div>
-    <div class="elem">text</div>
-    <div class="elem">text</div>
-    <div class="c1">
-      <div class="c2">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-    </div>
-    <div class="d1">
-      <div class="d2">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-      </div>
-      <div class="d3">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-      </div>
-      <div class="d4">
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non repellat
-        </p>
-      </div>
-    </div>
+  </div>
+</body>
 
-    <div class="parent">
-      <a href="">ссылка 1</a>
-      <a href="">ссылка 2</a>
-      <a href="">ссылка 3</a>
-    </div>
-
-    <div class="parent1">
-      <a href="">ссылка</a>
-    </div>
-  </body>
 </html>
