72.Позиционирование относительно родителя на CSS

--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -11,14 +11,11 @@
 <body>
   <h1>Заголовок 1</h1>
   <h2>Заголовок 2</h2>
-  <div class="parent">
-    <div class="child">1</div>
-    <div class="child">2</div>
-    <div class="child">3</div>
-    <div class="child">4</div>
-    <div class="child">5</div>
 
-  </div>
+  <div id="elem1"></div>
+  <div id="elem2"></div>
+  <div id="elem3"></div>
+
 </body>
 
 </html>
