73.Позиционирование относительно абсолютного родителя на CSS

--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -12,9 +12,34 @@
   <h1>Заголовок 1</h1>
   <h2>Заголовок 2</h2>
 
-  <div id="elem1"></div>
-  <div id="elem2"></div>
-  <div id="elem3"></div>
+  <div id="parent">
+    <div id="child"></div>
+    <div id="child2"></div>
+  </div>
+
+  <div id="parent1">
+    <div id="chi_da1"></div>
+    <div id="chi_da2"></div>
+    <div id="chi_da3"></div>
+  </div>
+
+  <div class="round">
+    <div id="r_left"></div>
+    <div id="r_right"></div>
+    <div id="square"></div>
+    <div id="square2"></div>
+  </div>
+
+  <div class="round2">
+    <div id="r_left2"></div>
+    <div id="r_right2"></div>
+    <div id="square2a"></div>
+    <div id="square3"></div>
+    <div id="square4"></div>
+  </div>
+
+
+
 
 </body>
 
