--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -9,38 +9,48 @@
 </head>
 
 <body>
-  <h1>Заголовок 1</h1>
-  <h2>Заголовок 2</h2>
-
-  <div id="parent">
-    <div id="child"></div>
-    <div id="child2"></div>
+  <div id="elem">
+    <h3>Новостной портал</h3>
   </div>
-
-  <div id="parent1">
-    <div id="chi_da1"></div>
-    <div id="chi_da2"></div>
-    <div id="chi_da3"></div>
+  <div id="content">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum mollitia placeat rem recusandae ducimus non illum.
+    Incidunt aspernatur facere repellendus officia enim sequi facilis, labore tempore soluta repellat temporibus
+    cupiditate.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum mollitia placeat rem recusandae ducimus non illum.
+    Incidunt aspernatur facere repellendus officia enim sequi facilis, labore tempore soluta repellat temporibus
+    cupiditate.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum mollitia placeat rem recusandae ducimus non illum.
+    Incidunt aspernatur facere repellendus officia enim sequi facilis, labore tempore soluta repellat temporibus
+    cupiditate.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellendus facilis fugit labore! Eveniet,
+    asperiores, recusandae obcaecati delectus ea possimus natus nobis ipsam illum atque quidem adipisci laborum
+    voluptatem
+    aliquam.
+    Maxime sint dolores reiciendis fugiat delectus? Aliquam velit, amet cupiditate non odio quidem vero? Totam nihil
+    harum
+    perferendis voluptas! Excepturi dolor vitae consequatur recusandae! Dicta ducimus veniam inventore aliquid cumque.
+    Nemo, fuga! Vitae culpa officiis itaque, sequi numquam minima sapiente placeat facilis deleniti est modi omnis,
+    expedita iusto quasi in ipsa voluptatem dolorum cumque fugiat corporis eaque! Ad, illum excepturi?
+    Unde aspernatur tempora et eveniet porro ab accusantium explicabo possimus, harum minima animi culpa ullam mollitia
+    debitis ducimus nostrum sequi voluptatem! Unde voluptate corrupti deserunt quod a vitae. Nemo, distinctio.
+    Cumque, ullam explicabo aliquid, saepe blanditiis quia quo, doloribus quos eum nemo iure culpa. Culpa harum a nisi
+    labore, ab error tempora ad doloribus, illum laborum dolor enim non sunt?
+    Quos omnis et ipsam consequuntur doloremque, culpa animi deserunt veritatis debitis enim aperiam officiis porro
+    cupiditate similique odio pariatur? Quos quo vitae placeat quae accusamus corporis dicta id eveniet eos.
+    Accusamus consectetur iure, autem sint quae est dolorum at vero nihil quaerat, itaque reprehenderit natus veniam
+    odio
+    atque laborum tempora quidem earum et officiis pariatur! Perspiciatis illo omnis mollitia aliquam!
+    Cum beatae perspiciatis quam commodi dolore, harum veniam aliquam! Facilis, saepe fugit. Eum ipsam quas natus
+    repellendus itaque nostrum odio consequatur praesentium voluptatem modi rem accusamus facere, maiores quos. Vel.
+    Suscipit nostrum provident ex aspernatur error pariatur tenetur aperiam quidem inventore perspiciatis molestias
+    laborum qui quisquam, iste nemo maiores voluptates quos voluptatibus doloremque sit quo dolore, vitae dolores iusto.
+    Consequatur?
+    Doloremque maiores, temporibus sapiente harum laborum id nisi distinctio culpa ipsum ab ipsa pariatur vel similique,
+    eos ducimus facilis suscipit. Atque veritatis minima odit distinctio culpa voluptatem aliquid alias deleniti?
   </div>
-
-  <div class="round">
-    <div id="r_left"></div>
-    <div id="r_right"></div>
-    <div id="square"></div>
-    <div id="square2"></div>
-  </div>
-
-  <div class="round2">
-    <div id="r_left2"></div>
-    <div id="r_right2"></div>
-    <div id="square2a"></div>
-    <div id="square3"></div>
-    <div id="square4"></div>
-  </div>
-
-
-
-
+  <div id="el1"></div>
+  <div id="el2"></div>
+  <div id="el3"></div>
 </body>
 
 </html>
