--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -9,48 +9,32 @@
 </head>
 
 <body>
-  <div id="elem">
-    <h3>Новостной портал</h3>
+  <div>
+    <p>
+      <img class="img1" src="images/img1.png" alt="">
+
+      <img class="img2" src="images/img1.png" alt="">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nisi inventore consectetur porro molestias ipsam.
+      Quasi eveniet praesentium veritatis tenetur nostrum. Tenetur itaque ipsam atque labore, iste maxime delectus
+      culpa?
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia porro magnam quod quibusdam laborum voluptatibus
+      nemo iure odit expedita necessitatibus. Nihil, tempore harum laudantium nemo corporis eveniet non possimus
+      repellat?
+      Omnis nulla deleniti illum, pariatur earum impedit ad accusantium inventore quidem tempora unde cumque porro saepe
+      nostrum non corrupti quam, velit optio aut laborum ab! Quia labore soluta maxime deleniti.
+      Atque ut odit quod enim nihil impedit, voluptatem voluptatibus debitis earum ipsam culpa animi numquam ex, alias
+      totam! Ea rem alias incidunt libero, eos illo esse! Modi perferendis at exercitationem!
+      Repellat rerum omnis exercitationem, cupiditate reprehenderit quasi magnam harum dolor ducimus aperiam molestias
+      animi a voluptates assumenda aspernatur accusantium sapiente corrupti aliquid consequuntur, ullam unde sequi
+      doloremque earum ex! Eligendi?
+      Non molestias nostrum nam culpa facilis facere fuga dolore, laborum porro. Reiciendis ab impedit perferendis
+      tenetur maiores quas quae error labore esse, aspernatur incidunt possimus minima deleniti sunt modi iste?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quae sapiente corrupti dignissimos in.
+      Voluptatibus quia, beatae unde itaque animi sit nihil saepe accusamus cupiditate culpa at debitis eligendi error.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. A reprehenderit id, consequuntur quasi vel magni totam,
+      eveniet et perspiciatis, minus architecto aliquam inventore nobis in dolorum excepturi porro fugit! Dignissimos.
+    </p>
   </div>
-  <div id="content">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum mollitia placeat rem recusandae ducimus non illum.
-    Incidunt aspernatur facere repellendus officia enim sequi facilis, labore tempore soluta repellat temporibus
-    cupiditate.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum mollitia placeat rem recusandae ducimus non illum.
-    Incidunt aspernatur facere repellendus officia enim sequi facilis, labore tempore soluta repellat temporibus
-    cupiditate.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum mollitia placeat rem recusandae ducimus non illum.
-    Incidunt aspernatur facere repellendus officia enim sequi facilis, labore tempore soluta repellat temporibus
-    cupiditate.
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellendus facilis fugit labore! Eveniet,
-    asperiores, recusandae obcaecati delectus ea possimus natus nobis ipsam illum atque quidem adipisci laborum
-    voluptatem
-    aliquam.
-    Maxime sint dolores reiciendis fugiat delectus? Aliquam velit, amet cupiditate non odio quidem vero? Totam nihil
-    harum
-    perferendis voluptas! Excepturi dolor vitae consequatur recusandae! Dicta ducimus veniam inventore aliquid cumque.
-    Nemo, fuga! Vitae culpa officiis itaque, sequi numquam minima sapiente placeat facilis deleniti est modi omnis,
-    expedita iusto quasi in ipsa voluptatem dolorum cumque fugiat corporis eaque! Ad, illum excepturi?
-    Unde aspernatur tempora et eveniet porro ab accusantium explicabo possimus, harum minima animi culpa ullam mollitia
-    debitis ducimus nostrum sequi voluptatem! Unde voluptate corrupti deserunt quod a vitae. Nemo, distinctio.
-    Cumque, ullam explicabo aliquid, saepe blanditiis quia quo, doloribus quos eum nemo iure culpa. Culpa harum a nisi
-    labore, ab error tempora ad doloribus, illum laborum dolor enim non sunt?
-    Quos omnis et ipsam consequuntur doloremque, culpa animi deserunt veritatis debitis enim aperiam officiis porro
-    cupiditate similique odio pariatur? Quos quo vitae placeat quae accusamus corporis dicta id eveniet eos.
-    Accusamus consectetur iure, autem sint quae est dolorum at vero nihil quaerat, itaque reprehenderit natus veniam
-    odio
-    atque laborum tempora quidem earum et officiis pariatur! Perspiciatis illo omnis mollitia aliquam!
-    Cum beatae perspiciatis quam commodi dolore, harum veniam aliquam! Facilis, saepe fugit. Eum ipsam quas natus
-    repellendus itaque nostrum odio consequatur praesentium voluptatem modi rem accusamus facere, maiores quos. Vel.
-    Suscipit nostrum provident ex aspernatur error pariatur tenetur aperiam quidem inventore perspiciatis molestias
-    laborum qui quisquam, iste nemo maiores voluptates quos voluptatibus doloremque sit quo dolore, vitae dolores iusto.
-    Consequatur?
-    Doloremque maiores, temporibus sapiente harum laborum id nisi distinctio culpa ipsum ab ipsa pariatur vel similique,
-    eos ducimus facilis suscipit. Atque veritatis minima odit distinctio culpa voluptatem aliquid alias deleniti?
-  </div>
-  <div id="el1"></div>
-  <div id="el2"></div>
-  <div id="el3"></div>
 </body>
 
 </html>
