99.Порядок flex блоков через CSS

--- a/JS/codemu/codemuhtml/index.html
+++ b/JS/codemu/codemuhtml/index.html
@@ -9,31 +9,20 @@
 </head>
 
 <body>
-  <div>
-    <p>
-      <img class="img1" src="images/img1.png" alt="">
+  <div class="parent">
+    <div class="child">1</div>
+    <div class="child ">2</div>
+    <div class="child elem">3</div>
+    <div class="child">4</div>
+    <div class="child">5</div>
+  </div>
 
-      <img class="img2" src="images/img1.png" alt="">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nisi inventore consectetur porro molestias ipsam.
-      Quasi eveniet praesentium veritatis tenetur nostrum. Tenetur itaque ipsam atque labore, iste maxime delectus
-      culpa?
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia porro magnam quod quibusdam laborum voluptatibus
-      nemo iure odit expedita necessitatibus. Nihil, tempore harum laudantium nemo corporis eveniet non possimus
-      repellat?
-      Omnis nulla deleniti illum, pariatur earum impedit ad accusantium inventore quidem tempora unde cumque porro saepe
-      nostrum non corrupti quam, velit optio aut laborum ab! Quia labore soluta maxime deleniti.
-      Atque ut odit quod enim nihil impedit, voluptatem voluptatibus debitis earum ipsam culpa animi numquam ex, alias
-      totam! Ea rem alias incidunt libero, eos illo esse! Modi perferendis at exercitationem!
-      Repellat rerum omnis exercitationem, cupiditate reprehenderit quasi magnam harum dolor ducimus aperiam molestias
-      animi a voluptates assumenda aspernatur accusantium sapiente corrupti aliquid consequuntur, ullam unde sequi
-      doloremque earum ex! Eligendi?
-      Non molestias nostrum nam culpa facilis facere fuga dolore, laborum porro. Reiciendis ab impedit perferendis
-      tenetur maiores quas quae error labore esse, aspernatur incidunt possimus minima deleniti sunt modi iste?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quae sapiente corrupti dignissimos in.
-      Voluptatibus quia, beatae unde itaque animi sit nihil saepe accusamus cupiditate culpa at debitis eligendi error.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. A reprehenderit id, consequuntur quasi vel magni totam,
-      eveniet et perspiciatis, minus architecto aliquam inventore nobis in dolorum excepturi porro fugit! Dignissimos.
-    </p>
+  <div class="parent1">
+    <div class="chi_da">1</div>
+    <div class="chi_da elem_da">2</div>
+    <div class="chi_da">3</div>
+    <div class="chi_da elem_da2">4</div>
+    <div class="chi_da">5</div>
   </div>
 </body>
 
