--- a/JS/Morgan/index.html
+++ b/JS/Morgan/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Моя Страница</title>
 </head>
 <script src="script.js"></script>
 
 <body>
+    <h1>Привет Мир!</h1>
+    <p>Моя <em>первая</em> <strong>веб-страничка</strong>.</p>
+    <p>Добавим-ка еще <strong><em>параграф</em></strong>.</p>
+    <p><a href=" http://yandex.ru">Нажмите сюда</a>, чтобы почитать</p>
 
 </body>
 
