--- a/JS/Morgan/index.html
+++ b/JS/Morgan/index.html
@@ -9,11 +9,39 @@
 <script src="script.js"></script>
 
 <body>
-    <h1>Привет Мир!</h1>
-    <p>Моя <em>первая</em> <strong>веб-страничка</strong>.</p>
-    <p>Добавим-ка еще <strong><em>параграф</em></strong>.</p>
-    <p><a href=" http://yandex.ru">Нажмите сюда</a>, чтобы почитать</p>
+    <!-- <h1 id="main-heading">Привет Мир!</h1> -->
+    <h1 id="heading">Hello World!</h1>
+    <!-- <h1>Привет Мир!!!!!!!!</h1> -->
+    <!-- <p>Моя <em>первая</em> <strong>веб-страничка</strong>.</p> -->
+    <!-- <p>Добавим-ка еще <strong><em>параграф</em></strong>.</p> -->
+    <!-- <p><a href=" http://yandex.ru">Нажмите сюда</a>, чтобы почитать</p> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>
+        // var newHeadingText = prompt("Введите новый заголовок:");
+        // $("#main-heading").text(newHeadingText);
+        // $("body").append("<p>Это новый параграф</p>");
+        // $('h1').fadeOut(10000);
+        // $("h1").text("Этот текст скоро исчезнет").fadeOut(3000);
+        // $("h1").fadeOut(3000).fadeIn(2000);
+        // $("h1").slideUp(1000).slideDown(1000);
 
+        // for (var i = 0; i < 5; i++) {
+        //     $("h1").fadeOut(1000);
+        //     $("h1").fadeIn(1000);
+        // }
+        
+        $("html").mousedown(function (event) {
+        $("#heading").offset({
+         left: event.pageX,
+          top: event.pageY,
+           });
+        });
+
+        
+    </script>
+
+    </script>
 </body>
 
 </html>
