Инструкция return в JavaScript

--- a/JS/codemu/Node begin/30/elems/menu.html
+++ b/JS/codemu/Node begin/30/elems/menu.html
@@ -9,6 +9,10 @@
             <a class="nav-item nav-link active" href="/">Главная <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="/about">О нас</a>
             <a class="nav-item nav-link" href="/contacts">Контакты</a>
+            <a class="nav-item nav-link" href="/price">Цена</a>
+            <a class="nav-item nav-link" href="/services">Сервисы</a>
+            <a class="nav-item nav-link" href="/ourwork">Наши работы</a>
+
             <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </div>
     </div>
