--- a/JS/codemu/Node begin/30/pages/index.html
+++ b/JS/codemu/Node begin/30/pages/index.html
@@ -1,3 +1,15 @@
 {{set title "Page Index"}}
-<img src="/public/image.jpg" alt="">
+<!-- <img src="/public/image.jpg" alt=""> -->
 <b>Главная страница</b>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, ab est? Sunt, officiis. Corrupti earum neque
+    reprehenderit sapiente deleniti maiores qui doloremque voluptate sit, minima, hic sunt unde dolore eveniet?
+    Repudiandae eveniet quam ipsam. Perspiciatis at optio minima odio voluptates. Fugiat, optio nihil! Dolorem adipisci
+    ducimus ipsum. Id, architecto similique laboriosam, expedita labore facere sed numquam veritatis neque incidunt
+    quos.
+    Repudiandae, iusto. Officia fugit soluta laudantium repellendus quam mollitia voluptas, asperiores voluptatum
+    impedit at hic et aspernatur voluptatem. Assumenda aspernatur perspiciatis aperiam, ad fugiat vitae placeat in
+    tenetur doloremque nesciunt.
+    Deserunt fugiat nihil eius ducimus, eveniet adipisci ea, est numquam ipsum vitae vel rerum distinctio sit explicabo
+    autem aperiam alias hic saepe sapiente itaque modi harum exercitationem consequatur rem. Labore?
+    Iste fugit, officia quam facilis tempore illum sapiente quibusdam incidunt id perspiciatis sed eos ab saepe
+    reprehenderit esse. Reiciendis nihil, nobis doloremque optio sit mollitia accusamus a repudiandae veniam nemo.</p>
