158.Несколько обработчиков одного события в JavaScript

--- a/JS/codemu/codemuJS/index.html
+++ b/JS/codemu/codemuJS/index.html
@@ -7,8 +7,14 @@
   <title>Document</title>
   <script src="script.js"></script>
   <script src="script2.js"></script>
+
+
 </head>
 
-<body></body>
+<body>
+  <input id="button" type="submit">
+  <script src="script3.js"></script>
+
+</body>
 
 </html>
