--- a/JS/codemu/codemuJS/index.html
+++ b/JS/codemu/codemuJS/index.html
@@ -1,20 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script src="script.js"></script>
+    <script src="script2.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <script src="script.js"></script>
-  <script src="script2.js"></script>
+  <body>
+    <input id="button" type="submit" />
+    <p id="elem1">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+      eveniet incidunt aliquam, harum odio saepe autem nihil non sequi, dicta
+      sit quidem accusantium accusamus nesciunt quia quaerat iure ex ad!
+      <a href="https://yandex.ru/">сс</a>
+    </p>
 
+    <input id="button1" type="submit" value="кнопка1" />
 
-</head>
+    <p id="q">12</p>
+    <p id="w">8</p>
+    <input id="button2" type="submit" value="button2" />
 
-<body>
-  <input id="button" type="submit">
-  <script src="script3.js"></script>
+    <p id="e"></p>
+    <p id="r">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nostrum
+      quam cupiditate earum ea commodi laudantium maiores voluptatibus nisi at
+      excepturi repudiandae nihil exercitationem est ratione, eos obcaecati!
+      Quisquam, minus.
+    </p>
+    <input type="submit" id="button3" value="button3" />
+    <input type="submit" id="button4" value="button4" />
 
-</body>
+    <p id="t">Lorem ipsum dolor sit amet</p>
+    <p id="y">Lorem ipsum dolor sit amet</p>
+    <p id="u">Lorem ipsum dolor sit amet</p>
 
+    <p id="i">2</p>
+
+    <input type="submit" id="button5" value="button5" />
+
+    <p id="o">23</p>
+    <input type="submit" id="button6" value="button6" />
+
+    <p id="a">23</p>
+    <input type="submit" id="button7" value="button7" />
+
+    <p id="s">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem recusandae
+      aspernatur, laboriosam explicabo quasi ratione dolor dignissimos natus,
+      reprehenderit, repudiandae cum. Culpa neque cupiditate earum omnis sed
+      voluptatibus, quam commodi.
+    </p>
+    <input type="submit" id="button8" value="button8" />
+
+    <p id="d">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem recusandae
+      aspernatur, laboriosam explicabo quasi ratione dolor dignissimos natus,
+      reprehenderit, repudiandae cum. Culpa neque cupiditate earum omnis sed
+      voluptatibus, quam commodi.
+    </p>
+    <input type="submit" id="button9" value="button9" />
+
+    <input id="elemm" type="text" />
+    <input id="buttonn" type="submit" />
+
+    <input id="ele" type="email" />
+
+    <input id="ele2" type="" />
+    <input type="submit" id="button10" value="button10" />
+
+    <script src="script3.js"></script>
+  </body>
 </html>
