--- a/JS/codemu/codemuJS/index2.html
+++ b/JS/codemu/codemuJS/index2.html
@@ -5,11 +5,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script5.js"></script>
 </head>
 
 <body>
+    <!-- <p id="elem" class="www ggg zzz"></p> 
 
+    <p id="elem" class='staff gaf maf faf paf'></p>
+
+    <p id="elem1" class="wwwrr gggtt zzzyyy4"></p>
+
+    <p id="elem" class="www1 ggg1 zzz1"></p>
+
+    <p id="elem">text</p>
+
+    <div class="square"></div>
+    <input class="button" type="submit" value="Нажать">
+
+    <div class="square1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia commodi a est ut quo, aspernatur sint
+            reprehenderit harum! Aliquid debitis laborum voluptate quasi ducimus corporis necessitatibus quidem rem
+            dicta aperiam?</p>
+    </div>
+    <input class="button1" type="submit" value="Нажать">
+
+    <p>text1</p>
+    <p>text2</p>
+    <p>text3</p>
+
+    <div class="lorem">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia commodi a est ut quo, aspernatur sint
+            reprehenderit harum! Aliquid debitis laborum voluptate quasi ducimus corporis necessitatibus quidem rem
+            dicta aperiam?</p>
+    </div>
+    <input class="button1" type="submit" value="сделать жирным">
+
+    <input class="button2" type="submit" value="сделать красным">
+
+    <input class="button3" type="submit" value="перечеркнуть">
+
+    <button id="button">click me</button>
+    <div id="elem"></div>-->
+
+
+
+    <style>
+        .colored {
+            color: green;
+        }
+
+        .del {
+            text-decoration: line-through blue;
+        }
+
+        .my-bold-font {
+            font-weight: bold;
+        }
+
+        .colored {
+            color: red;
+        }
+
+        #elem {
+            display: none;
+            width: 200px;
+            height: 200px;
+            border: 1px solid green;
+        }
+
+        #elem.active {
+            display: block;
+        }
+    </style>
+
+
+    <!-- 176.Отработка изученного материала на работу с DOM -->
+
+    <input id="inp" type="text">
+    <p id="abz"></p>
+
+
+    <p><input type="text" name="" value=""></p>
+    <p><input type="text" name="" value=""></p>
+    <button type="button" name="button">Кнопка</button>
+    <p id="p"></p>
+
+
+
+
+    <script src="script5.js"></script>
 </body>
 
 </html>
