--- a/JS/codemu/codemuJS/index3.html
+++ b/JS/codemu/codemuJS/index3.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- <div id="parent">
         <p>1v</p>
         <p>2x</p>
@@ -56,12 +55,51 @@
                 <span id="elem"></span>
             </p>
         </div>
-    </header>-->
+    </header>
 
     <input id="elem" value="???">
 
+    <div id="elem"></div>
+
+    <ul>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+      <li>text</li>
+    </ul>
+
+    <p class="www">elem 1</p>
+    <p class="www">elem 2</p>
+    <p class="www">elem 3</p>
+
+    <div id="parent">
+      <p class="www">text</p>
+      <p class="www">text</p>
+      <p class="www">text</p>
+      <p class="ggg">text</p>
+      <p class="ggg">text</p>
+      <p class="ggg">text</p>
+    </div>
+
+    <textarea id="elem">text1</textarea>
+    <p></p>
+
+    <input id="elem" disabled />
+
+    <input id="inp1" type="text" />
+    <button id="button1">Заблокировать</button>
+    <button id="button2">Разблокировать</button>
+    <button id="button3">Проверить</button>
+
+    <p><input id="input" type="text" name="" value="" /></p>
+    <p><button id="button" type="button" name="button">Кнопка1</button></p>
+    <p id="p"></p>-->
+
+    <input type="checkbox" checked id="elem" />
+    <button id="button1">снять метку</button>
+    <button id="button2">поставить метку</button>
 
     <script src="script6.js"></script>
-</body>
-
+  </body>
 </html>
