--- a/JS/codemu/codemuJS/index3.html
+++ b/JS/codemu/codemuJS/index3.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- <div id="parent">
         <p>1v</p>
         <p>2x</p>
@@ -94,12 +95,35 @@
 
     <p><input id="input" type="text" name="" value="" /></p>
     <p><button id="button" type="button" name="button">Кнопка1</button></p>
-    <p id="p"></p>-->
+    <p id="p"></p>
 
     <input type="checkbox" checked id="elem" />
     <button id="button1">снять метку</button>
     <button id="button2">поставить метку</button>
 
+    <input id="elem" disabled>
+    <input id="button" type="submit">
+
+    <input type="checkbox" checked id="elem" />
+    <input id="button1" type="submit">
+
+    <input type="radio" name="elem" value="1">
+    <input type="radio" name="elem" value="2">
+    <input type="radio" name="elem" value="3">
+    <button type="button" name="button">Кнопка</button>
+    <p></p>
+
+    <input id="elem" value="text">
+    <p></p>
+    <input id="elem" value="">
+
+    <input id="elem">-->
+
+    <input id="elem" value="text">
+    <input type="submit" id="button">
+
+
     <script src="script6.js"></script>
-  </body>
+</body>
+
 </html>
