193.Пользовательские атрибуты в JavaScript

--- a/JS/codemu/codemuJS/index3.html
+++ b/JS/codemu/codemuJS/index3.html
@@ -117,11 +117,60 @@
     <p></p>
     <input id="elem" value="">
 
-    <input id="elem">-->
+    <input id="elem">
 
     <input id="elem" value="text">
     <input type="submit" id="button">
 
+
+    <select id="select">
+        <option>one</option>
+        <option selected>two</option>
+        <option>three</option>
+    </select>
+
+    <p></p>
+
+    <input type="submit" id="button">
+
+    <select id="select">
+        <option>2020</option>
+        <option>2021</option>
+        <option>2022</option>
+        <option>2023</option>
+        <option>2024</option>
+        <option>2025</option>
+        <option>2026</option>
+        <option>2027</option>
+        <option>2028</option>
+        <option>2029</option>
+        <option>2030</option>
+    </select>
+    <button type="button" name="button">Кнопка</button>
+    <p></p>
+
+    <select id="select">
+        <option value="1">one</option>
+        <option value="2" selected>two</option>
+        <option value="3">three</option>
+    </select>
+
+    <select id="select">
+        <option value="1">пн</option>
+        <option value="2">вт</option>
+        <option value="3">ср</option>
+        <option value="4">чт</option>
+        <option value="5">пт</option>
+        <option value="6">сб</option>
+        <option value="7">вс</option>
+    </select>
+-->
+
+    <select id="select">
+        <option value="one" selected>один</option>
+        <option value="two">два</option>
+        <option value="three">три</option>
+    </select>
 
     <script src="script6.js"></script>
 </body>
