--- a/JS/codemu/Node begin/30v/elems/footer.html
+++ b/JS/codemu/Node begin/30v/elems/footer.html
@@ -26,6 +26,11 @@
     </div>
 
     <div class="box">
+        <a href="https://yandex.ru/">ссылка 1</a>
+        <a href="https://yandex.ru/">ссылка 2</a>
+        <a href="https://yandex.ru/">ссылка 3</a>
+        <a href="https://yandex.ru/">ссылка 4</a>
+        <a href="https://yandex.ru/">ссылка 5</a>
 
     </div>
 
