195.Обращение через методы к data атрибутам в JavaScript

--- a/JS/codemu/codemuJS/index4.html
+++ b/JS/codemu/codemuJS/index4.html
@@ -9,7 +9,22 @@
 
 <body>
 
-    <div id="elem" data-num="1000"></div>
+    <!-- <div id="elem" data-num="1000 раз славен"></div>
+
+    <div id="elem1" data-text="str мы победим">Привет Славяне
+    </div> 
+
+    <div data-num="1">Слава</div>
+    <div data-num="2">Слава</div>
+    <div data-num="3">Слава</div>
+    <div data-num="4">Слава</div>
+    <div data-num="5">Слава</div>
+
+    <div id="elem" data-product-price="1000" data-product-amount="5">
+        товар яблоки
+    </div>
+-->
+    <div id="elem" data-num="1000" data-my-num="2000"></div>
 
     <script src="script7.js"></script>
 </body>
