--- a/JS/codemu/codemuJS/index4.html
+++ b/JS/codemu/codemuJS/index4.html
@@ -23,8 +23,13 @@
     <div id="elem" data-product-price="1000" data-product-amount="5">
         товар яблоки
     </div>
--->
     <div id="elem" data-num="1000" data-my-num="2000"></div>
+-->
+
+    <p id="abz1">1Lorem ipsum dolor sit amet</p>
+    <p id="abz1">2Lorem ipsum dolor sit amet</p>
+    <p id="abz1">3Lorem ipsum dolor sit amet</p>
+
 
     <script src="script7.js"></script>
 </body>
