--- a/Vue/testCodemu/index.html
+++ b/Vue/testCodemu/index.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
+  
+<!-- ---------------------------------------- -->
 
-  <div id="app">
-    <ul>
-      <li v-for="item in items">{{ item }}</li>
-    </ul>
-  </div>
+<div id="app">
+	<my-component name ="Вася"></my-component>
+</div>
+
+<!-- ---------------------------------------- -->
 
   <script src="vue.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script> -->
